Implements todo completion

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": { "*": ["types/*"] },
     "lib": ["es5", "es6"],
     "target": "es5",
     "module": "commonjs",
