--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "apollo-server-express": "^2.4.8",
     "bcrypt": "^3.0.5",
+    "cookie-parser": "^1.4.4",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "graphql": "^14.2.0",
     "graphql-import": "^0.7.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.9.0",
     "ramda": "^0.26.1",
     "reflect-metadata": "^0.1.13",
