--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^8.10.45",
     "@types/ramda": "^0.26.5",
     "nodemon": "^1.18.10",
@@ -13,7 +14,6 @@
   "dependencies": {
     "apollo-server-express": "^2.4.8",
     "bcrypt": "^3.0.5",
-    "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "graphql": "^14.2.0",
