--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "backend-node",
   "version": "0.0.1",
-  "description": "Awesome project developed with TypeORM.",
+  "description": "",
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/cookie-parser": "^1.4.1",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^8.10.45",
     "@types/ramda": "^0.26.5",
@@ -14,6 +15,7 @@
   "dependencies": {
     "apollo-server-express": "^2.4.8",
     "bcrypt": "^3.0.5",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "graphql": "^14.2.0",
